--- a/test/test.html
+++ b/test/test.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="../NiniSlider.js"></script>
+    <style id="a">
+        img{
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
     <div id="test" style="width:400px; height:300px;"></div>
@@ -13,7 +19,7 @@
         window.onload = function() {
             var a = NiniSlider({
                 id: "test"
-                , data: [{src: "../images/aaa.png"}]
+                , data: [{src: "../images/aaa.png"},{src: "../images/aaa.png"}]
             });
             console.log(a);
             console.dir(NiniSlider);
