--- a/test/test.html
+++ b/test/test.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="../NiniSlider.js"></script>
-    <style id="a">
+    <style>
         img{
             width: 100%;
             height: 100%;
