--- a/test/test.html
+++ b/test/test.html
@@ -20,6 +20,7 @@
             var a = NiniSlider({
                 id: "test"
                 , data: [{src: "../images/aaa.png"},{src: "../images/aaa.png"}]
+                , infinity: true
             });
             console.log(a);
             console.dir(NiniSlider);
