--- a/test/test.html
+++ b/test/test.html
@@ -19,8 +19,8 @@
         window.onload = function() {
             var a = NiniSlider({
                 id: "test"
-                , data: [{src: "../images/aaa.png"},{src: "../images/aaa.png"}]
-                , infinity: true
+                , data: [{src: "../images/aaa.png"},{src: "../images/aaa.png"},{src: "../images/aaa.png"},{src: "../images/aaa.png"}]
+                , defaultIndex: 2
             });
             console.log(a);
             console.dir(NiniSlider);
